fixed footer layout bug; added seas; added placeholder bio

--- a/_sass/_nav_menu.scss
+++ b/_sass/_nav_menu.scss
@@ -1,4 +1,5 @@
 // Nav menu styles
+
 body {
   position: relative;
 }
@@ -46,8 +47,9 @@ nav {
         display: none;
       }
       li.icon {
-        float: right;
-        display: inline-block;
+        position: absolute;
+        right: 0;
+        display: block;
       }
     }
   }
